# CardBrick

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Cargo.toml  README.md  build.sh  init.sh  launch.sh
.cargo/: config.toml
.github/workflows/: ci.yml
LICENSES/: NotoSans-OFL.txt
assets/: cardbrick.desktop
cardbrick/: Cargo.toml
cardbrick-bin/: Cargo.toml
cardbrick-bin/src/: main.rs
cmake/: arm-toolchain.cmake
docs/: compilation_thoughts.md  index.md
scripts/: ruby_fixer.py
scripts/build_scp_and_rsync/: Dockerfile.scp_and_rsync
src/: config.rs  debug.rs  html.rs  main.rs  scheduler.rs  state.rs
src/deck/: html_parser.rs  loader.rs  mod.rs
src/scenes/: mod.rs
src/scenes/deck_selection/: input.rs  mod.rs
src/scenes/main_menu/: input.rs  mod.rs
src/scenes/studying/: input.rs  logic.rs  mod.rs
src/storage/: db.rs  mod.rs  replay_log.rs
src/ui/: canvas.rs  font.rs  mod.rs  sprite.rs
toolchain/: Dockerfile  Dockerfile.simplified
