[package]
name = "cardbrick"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "An Anki-compatible flash-card app for the TrimUI Brick"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core Application & UI
# Using sdl2 0.35 as 0.36 has shown some build issues on certain platforms.
sdl2 = { version = "0.35", features = ["bundled", "image", "ttf"] }

# Deck & Media Handling
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "1.1"
# We specify no default features to keep the binary size smaller
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# HTML Editing
tl = { version = "0.7" }

# Audio
# miniaudio = { version = "0.11", features = ["all-formats"] }
# opus-sys = "0.3" # Note: requires libopus-dev

# Networking & Sync
tiny_http = "0.12"
# libmdns = "0.4" # This has been unmaintained, we might need an alternative

# DB
chrono = { version = "0.4", features = ["serde"] }

# Utilities
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
rand = "0.8"

[features]
default = []

[[bin]]
name = "cardbrick"
path = "src/main.rs"
