[package]
name        = "cardbrick"
version     = "0.1.0"
edition     = "2021"
license     = "GPL-3.0-or-later"
description = "An Anki-compatible flash-card app for the TrimUI Brick"

[dependencies]
sdl2 = { version = "0.35", default-features = false, features = ["ttf", "image", "mixer"] }
rusqlite = { version = "0.31", features = ["bundled"] }
zip      = "1.1"
image    = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tl       = { version = "0.7" }
tiny_http = "0.12"
chrono   = { version = "0.4", features = ["serde"] }
log      = "0.4"
env_logger = "0.11"
serde    = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
rand     = "0.8"

[features]
default = []

[[bin]]
name = "cardbrick"
path = "src/main.rs"